--- a/my-weather/package.json
+++ b/my-weather/package.json
@@ -32,5 +32,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy" : "https://www.metaweather.com/"
+  "proxy": "https://www.metaweather.com"
 }
