--- a/my-weather/package.json
+++ b/my-weather/package.json
@@ -32,5 +32,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://www.metaweather.com"
+  "devDependencies": {
+    "http-proxy-middleware": "^1.0.5"
+  }
 }
